# sdfm

./: Cargo.toml  LICENSE  README.md
src/: args.rs  dotfiles.rs  init.rs  main.rs  merge.rs  pull.rs  repos.rs
src/defaults/: i3.toml
