[package]
name = "sdfm"
version = "0.0.1"
authors = ["jamesmcm"]
edition = "2018"
readme = "README.md"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.11"
anyhow = "1.0.26"
serde = "1.0.104"
toml = "0.5.6"
serde_derive = "1.0.104"
git2 = "0.12.0"
dirs = "2.0.2"
xdg = "2.2.0"
